# k2hdkc_dbaas_k8s_cli

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_helper.sh  ci.yml  ostypevars.sh
buildutils/: APKBUILD.templ.in  Makefile.am  control.in  debian_build.sh  k2hdkc-dbaas-k8s-cli.install  k2hdkc-dbaas-k8s-cli.spec.in  make_rpm_changelog.sh  rules.in  setup_k2hr3_cli_component.sh
src/: Makefile.am
src/libexec/: Makefile.am
src/libexec/database-k8s/: CREDIT  Makefile.am  certification.sh  command.sh  configuration.sh  constvariables.sh  dbaas-k2hdkc-chmpxproc-wrap.sh  dbaas-k2hdkc-ini-update.sh  dbaas-k2hdkc-k2hr3-registration.sh  dbaas-k2hdkc-kustomization.yaml.templ  dbaas-k2hdkc-server.yaml.templ  dbaas-k2hdkc-serverproc-wrap.sh  dbaas-k2hdkc-slave.yaml.templ  dbaas-k2hdkc-variables-setup.sh  dbaas-k2hdkc.ini.templ  dbaas-k8s.config  functions.sh  help.sh  k2hdkc.config  k2hr3-api-nodeport.yaml.templ  k2hr3-api-production.json.templ  k2hr3-api-wrap.sh  k2hr3-app-init.sh  k2hr3-app-nodeport.yaml.templ  k2hr3-app-production.json.templ  k2hr3-app-wrap.sh  k2hr3-k2hdkc-ini-update.sh  k2hr3-k2hdkc.ini.templ  k2hr3-k2hdkc.yaml.templ  k2hr3-k2hr3api.yaml.templ  k2hr3-k2hr3app.yaml.templ  k2hr3-kustomization.yaml.templ  k2hr3-sa.yaml.templ  k2hr3.config  k8sapi.sh  options.sh  summary.sh  variables.sh
test/: Makefile.am  test.sh  test_database_k8s.sh  util_dbaas_k8s_request.sh  util_dbaas_k8s_sub_request.sh
test/snapshots/: Makefile.am  test_database_k8s.snapshot
