#
# K2HDKC DBaaS on Kubernetes Command Line Interface - K2HR3 CLI Plugin
#
# Copyright 2021 Yahoo Japan Corporation.
#
# K2HDKC DBaaS is a DataBase as a Service provided by Yahoo! JAPAN
# which is built K2HR3 as a backend and provides services in
# cooperation with Kubernetes.
# The Override configuration for K2HDKC DBaaS serves to connect the
# components that make up the K2HDKC DBaaS. K2HDKC, K2HR3, CHMPX,
# and K2HASH are components provided as AntPickax.
#
# For the full copyright and license information, please view
# the license file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Wed Sep 15 2021
# REVISION:
#

EXTRA_DIST =	CREDIT \
				VERSION \
				help.sh \
				summary.sh \
				command.sh \
				variables.sh \
				options.sh \
				functions.sh \
				k8sapi.sh \
				certification.sh \
				configuration.sh \
				constvariables.sh \
				dbaas-k8s.config \
				k2hr3.config \
				k2hdkc.config \
				dbaas-k2hdkc-chmpxproc-wrap.sh \
				dbaas-k2hdkc.ini.templ \
				dbaas-k2hdkc-ini-update.sh \
				dbaas-k2hdkc-k2hr3-registration.sh \
				dbaas-k2hdkc-kustomization.yaml.templ \
				dbaas-k2hdkc-serverproc-wrap.sh \
				dbaas-k2hdkc-server.yaml.templ \
				dbaas-k2hdkc-slave.yaml.templ \
				dbaas-k2hdkc-variables-setup.sh \
				k2hr3-api-nodeport.yaml.templ \
				k2hr3-api-production.json.templ \
				k2hr3-app-nodeport.yaml.templ \
				k2hr3-app-production.json.templ \
				k2hr3-k2hdkc.yaml.templ \
				k2hr3-k2hr3api.yaml.templ \
				k2hr3-k2hr3app.yaml.templ \
				k2hr3-kustomization.yaml.templ \
				k2hr3-sa.yaml.templ \
				k2hr3-k2hdkc.ini.templ \
				k2hr3-k2hdkc-ini-update.sh \
				k2hr3-api-wrap.sh \
				k2hr3-app-wrap.sh \
				k2hr3-app-init.sh

#
# Local variables:
# tab-width: 4
# c-basic-offset: 4
# End:
# vim600: noexpandtab sw=4 ts=4 fdm=marker
# vim<600: noexpandtab sw=4 ts=4
#
